<resources>
    <string name="app_name">PosgradosApp</string>
    <string name="sedes">Sedes</string>
    <string name="tituloinicio">Posgrados APP</string>
    <string name="btestudiantes">Estudiantes</string>
    <string name="btinvitados">Invitados</string>
    <string name="titulologin">INICIAR SESIÓN</string>
    <string name="etUsuario">Correo Institucional</string>
    <string name="etContrasena">Contraseña</string>
    <string name="btLogin">Entrar</string>
    <string name="BASE_URL">http://posgradosapp.uniautonoma.edu.co/</string>
    <!--<string name="BASE_URL">http://192.168.0.17/posgradosapp/</string>-->
    <string name="asuntopqrs">PosgradosApp: Preguntas y comentarios</string>
    <string name="solicitudcontrasena">PosgradosApp: Solicitud de contraseña de usuario</string>
    <string name="solicitudcuerpo">He olvidado mi contraseña y mi correo es: </string>
    <string name="EstadoInternet">El dispositivo no tiene acceso a Internet</string>
    <string name="EstadoServidor">Lo sentimos, la aplicación no se ha podido conectar con el servidor.</string>
    <string name="tvNombreModulo">NEUROMARKETING</string>
    <string name="tvDuracionModulo">Mayo 1 a Junio 30</string>
    <string name="tvNombreDocente">Luis Carlos Ayala</string>
    <string name="tvCalificacion">4</string>
    <string name="tvEvaluacion">Docente</string>
    <string name="tvEsp">ESPECIALIZACIONES</string>
    <string name="tvDiahora">Dia y hora</string>
    <string name="tvSede">Sede</string>
    <string name="tvSalon">Salon</string>
    <string name="tvDireccion">Dirección</string>
    <string name="tvComentarios">ENVIANOS TUS COMENTARIOS</string>
    <string name="btEnviar">ENVIAR</string>
    <string name="tvContrasena">Olvidaste tu contraseña?</string>
    <string name="etcorreo">Ingresa tu correo institucional</string>
    <string name="btSolicitar">Solicitar</string>
    <string name="tvModulos">MÓDULOS</string>
    <string name="tvtitEscuela">La Escuela</string>
    <string name="tvQuienes">¿QUIÉNES SOMOS?</string>
    <string name="laescuela">LA ESCUELA</string>
    <string name="pagina">www.uniautonoma.edu.co</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="olvidaste">Olvidaste tu contraseña?</string>
    <string name="especializaciones">ESPECIALIZACIONES</string>
    <string name="ubicacion">DONDE NOS UBICAMOS</string>
    <string name="tvDocentes">DOCENTES</string>
    <string name="tituloposgrado">Titulo Posgrado</string>
    <string name="codsnies">Código snies:</string>
    <string name="totalcred">Total créditos:</string>
    <string name="duracion">Duración:</string>
    <string name="valorsemestre">Valor semestre:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="modulos">Módulos</string>
    <string name="docentes">Docentes</string>
    <string name="modulo">Modulo</string>
    <string name="parrafo">Parrafo</string>
    <string name="creditos">Creditos</string>
    <string name="nombre">Nombre</string>
    <string name="profesion">Profesion</string>
    <string name="msg_inicio_error">El usuario o la contraseña son incorrectos</string>
    <string name="msg_inicio_exito">Ha iniciado sesion correctamente</string>
    <string name="msg_horario_err">No se han asignado horarios para este semestre</string>
    <string name="btLogin2">INICIA SESIÓN</string>
    <string name="tvEstudiante">¿Eres estudiante de posgrados?</string>
    <string name="msg_correo_error">Usuario no encontrado</string>
    <string name="tvtCalificacion">Promedio</string>

</resources>