<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".presentation.Actividades.DetalleModuloActivity"
    android:padding="30dp"
    android:background="@drawable/fondo_internas"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.13">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/modulo"
            android:textSize="25sp"
            android:textColor="@color/blanco"
            android:fontFamily="@font/robotomedium"
            android:id="@+id/tvTituloModulo"/>

    </ScrollView>

    <com.uncopt.android.widget.text.justify.JustifiedTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/parrafo"
        android:textSize="20sp"
        android:textColor="@color/blanco"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/opensansregular"
        android:layout_weight="0.77"
        android:id="@+id/tvDetalleModulo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/creditos"
        android:textSize="20sp"
        android:textColor="@color/blanco"
        android:fontFamily="@font/opensansregular"
        android:layout_weight="0.1"
        android:id="@+id/tvCreditosModulo"/>

</LinearLayout>