<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Actividades.DetalleDocenteActivity"
    android:orientation="vertical"
    android:background="@drawable/fondo_internas"
    android:padding="25dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/ivFoto"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="25sp"
        android:textColor="@color/blanco"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/robotomedium"
        android:id="@+id/tvNombre"/>

    <com.uncopt.android.widget.text.justify.JustifiedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profesion"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/opensansregular"
        android:id="@+id/tvProfesion"/>

    <com.uncopt.android.widget.text.justify.JustifiedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/blanco"
        android:text="@string/descripcion"
        android:id="@+id/tvDescripcion"
        android:fontFamily="@font/opensansregular"
        android:layout_marginBottom="10dp"/>

</LinearLayout>